tests/paczka1/fuzzy1/52930058.err
Error in line 5: 8C0lNJi S711 92,6
Error in line 8: 8C0lNJi S664 6,3
Error in line 17: amZR S711 7,8
Error in line 18: amZR A674 46,3
Error in line 19: amZR S711 7,5
Error in line 24: amZR S664 82,8
Error in line 28: amZR A674 32,5
